force-app/main/default/objects/Skill_Course__c/Skill_Course__c.object-meta.xml
<CustomObject>
    <label>Skill Course</label>
    <nameField>
        <label>Skill Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>