force-app/main/default/objects/Skill_Course__c/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <label>Areas of Interest</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Areas_of_Interest</valueSetName>
    </valueSet>
</CustomField>