force-app/main/default/objects/Skill_Course__c/fields/Cumulative_Open_Seats__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Open_Seats__c</fullName>
    <label>Cumulative Open Seats</label>
    <summarizedField>Skill_Session__c.Seats_Open__c</summarizedField>
    <summaryForeignKey>Skill_Session__c.Skill_Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>