force-app/main/default/objects/Skill_Course__c/fields/Skill_Program__c.field-meta.xml
<CustomField>
    <fullName>Skill_Program__c</fullName>
    <label>Skill Program</label>
    <referenceTo>Skill_Program__c</referenceTo>
    <relationshipLabel>Skill Courses</relationshipLabel>
    <relationshipName>Skill_Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>