force-app/main/default/objects/Skill_Course__c/fields/Total_Hours_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_of_Sessions__c</fullName>
    <label>Total Hours of Sessions</label>
    <summarizedField>Skill_Session__c.Total_Hours_for_Session__c</summarizedField>
    <summaryForeignKey>Skill_Session__c.Skill_Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>